# active-build-script

./: README.md  install.sh
cli/: pyproject.toml
cli/src/active_build/: __init__.py  cli.py
cli/src/active_cli/: active_bstyle_cli.py  active_build_cli.py  active_common.py  active_tui.py
cli/tests/: test_cli.py
skill/active-build/: SKILL.md
skill/active-build/agents/: openai.yaml
skill/active-build/references/: commands.md
